# Fluid_Simulation

./: .gitignore  CMakeLists.txt  LICENSE
LinuxBuild/: CMakeCache.txt  FluidSymulation  Makefile  cmake_install.cmake
MacBuild/: CMakeCache.txt  FluidSymulation  Makefile  cmake_install.cmake
Notes/: doc.md
src/: buffer.cpp  buffer.h  device.cpp  device.h  initVulkan.cpp  initVulkan.h  main.cpp  offscreen.cpp  offscreen.h  pipeline.cpp  pipeline.h  swapChain.cpp  swapChain.h  utils.cpp  utils.h
src/shaders/: compile.sh  instanceShader.vert  instanceVert.spv  shader.vert
src/simulation/: Makefile  cudaCommons.h
src/simulation/ChronoCuda/: ChronoCuda.cu
src/simulation/cudaParticleSimulator/: cudaParticleSimulator.cu  cudaParticleSimulator.h
src/simulation/cudaParticleSimulator/Handlers/: calculateGridAdvection.cu  calculateGridParticles.cu  collisioonHandling.cu  extForces.cu  pressure_solver.cu  transfer.cu  updateParticlePositions.cu  updateSystem.cu
